tests/invalid/IntDiv_Invalid_1.whiley

function f(int x, int y) -> void
requires y >= 0:
    x = x / y
